bereal href fix

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="socials">
         <div class="icon-wrapper">
-          <a href="https://bereal.al/michal.wtf" target="_blank">
+          <a href="https://bere.al/michal.wtf" target="_blank">
             <img src="icons/BeReal_logo.png" alt="BeReal">
           </a>
         </div>
