updated twitter link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </a>
         </div>
         <div class="icon-wrapper">
-          <a href="https://twitter.com/michalpkwtf" target="_blank">
+          <a href="https://twitter.com/michal_wtf_" target="_blank">
             <img src="icons/Logo%20white.svg" alt="Twitter">
           </a>
         </div>
